Adding a class and test for Java 11 and junit5 and assertj